# SnakeGame

./: .gitignore  CLAUDE.md  main.py  pyproject.toml
config/: skins.json
docs/superpowers/plans/: 2026-06-09-snake-game.md  plan.md
scripts/: run.sh  test.sh
src/audio/: audio_manager.py
src/core/: config.py  engine.py  input_handler.py  state.py
src/entities/: food.py  obstacle.py  snake.py
src/rendering/: renderer.py  ui_renderer.py
src/skins/: skin_manager.py
src/systems/: collision.py  difficulty.py  scoring.py
src/ui/: base_scene.py  game_over_scene.py  leaderboard_scene.py  menu_scene.py  pause_scene.py  play_scene.py  settings_scene.py  skin_select_scene.py
tests/: conftest.py  test_collision.py  test_config.py  test_difficulty.py  test_food.py  test_input_handler.py  test_obstacle.py  test_scoring.py  test_skin_manager.py  test_snake.py
